CV as of October 2011

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -11,14 +11,18 @@
 \address{31 Mulberry Ln, Waterloo, ON}
 \address{tbekolay@gmail.com $\cdot$ (519) 573-4815}
 
-
 \begin{resume}
 
 \section{EDUCATION}
+  {\sl Doctor of Philosophy,} Computer Science \\
+  University of Waterloo, Waterloo, ON, \\
+  expected September 2015 \\
+  Member of the Computational Neuroscience Research Group
+
   {\sl Master of Mathematics,} Computer Science \\
   University of Waterloo, Waterloo, ON, \\
-  expected April 2011 \\
-  Member of Computational Neuroscience Research Group \\
+  graduated October 2011 \\
+  Member of the Computational Neuroscience Research Group \\
   Cumulative GPA: 91.50
   
   {\sl Honours Bachelor of Computer Science, Co-op Option} \\
@@ -27,63 +31,82 @@
   Minor in Asian Studies \\
   Cumulative GPA: 4.28/4.5
 
-\section{AWARDS}
-  {\sl Alexander Graham Bell Canada Graduate Scholarship - Masters} (NSERC) \\ 
-  \hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$17,500
-  
+\section{AWARDS \& \\ SCHOLARSHIPS}
+  {\sl Ontario Graduate Scholarship} (Ontario Ministry of Training, Colleges and Universities) \\ 
+  \hspace*{1cm} Effective 09/2011 - 09/2012. Value: \$15,000 \vspace{3pt} \\
   {\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
-  \hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$10,000
-  
+  \hspace*{1cm} Effective 09/2011 - 09/2012. Value: \$10,000 \vspace{3pt} \\
+  {\sl Ontario Graduate Scholarship in Science and Technology} \\
+  (Ontario Ministry of Training, Colleges and Universities) \\ 
+  \hspace*{1cm} Effective 01/2011 - 05/2011. Value: \$5000 \vspace{3pt} \\
+  {\sl Alexander Graham Bell Canada Graduate Scholarship - Masters} (NSERC) \\ 
+  \hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$17,500 \vspace{3pt} \\
+  {\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
+  \hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$10,000 \vspace{3pt} \\
   {\sl Distinguished TA Award} (School of Computer Science, University of Waterloo) \\
-  \hspace*{1cm} Awarded 09/2010
-  
+  \hspace*{1cm} Awarded 09/2010 \vspace{3pt} \\
   {\sl Excellence in Teaching Assistance Award} (Faculty of Science, University of Manitoba) \\
-  \hspace*{1cm} Awarded 09/2008. Value: \$300
-  
+  \hspace*{1cm} Awarded 09/2008. Value: \$300 \vspace{3pt} \\
   {\sl Shell FUEL Scholarship} (University of Manitoba) \\
-  \hspace*{1cm} Effective 09/2008 - 04/2009. Value: \$3750
-  
+  \hspace*{1cm} Effective 09/2008 - 04/2009. Value: \$3750 \vspace{3pt} \\
   {\sl Undergraduate Student Research Award} (NSERC) \\
-  \hspace*{1cm} Effective 05/2008 - 08/2008. Value: \$4500
-  
+  \hspace*{1cm} Effective 05/2008 - 08/2008. Value: \$4500 \vspace{3pt} \\
   {\sl Elizabeth Luginbuhl Memorial Award} (Computer Science, University of Manitoba) \\
-  \hspace*{1cm} Effective 09/2007 - 08/2008. Value: \$2250
-  
+  \hspace*{1cm} Effective 09/2007 - 08/2008. Value: \$2250 \vspace{3pt} \\
   {\sl Undergraduate Student Research Award} (NSERC) \\
-  \hspace*{1cm} Effective 05/2007 - 08/2007. Value: \$4500
-  
+  \hspace*{1cm} Effective 05/2007 - 08/2007. Value: \$4500 \vspace{3pt} \\
   {\sl Japan Student Services Scholarship} (Kokugakuin University, Tokyo) \\
   \hspace*{1cm} Effective 08/2005 - 08/2006. Value: \$11,000
 
-\section{WORK \\EXPERIENCE}
-  {\sl Sessional Instructor - CS116} \hfill Winter 2011 \\
+\clearpage
+
+\section{TEACHING \\EXPERIENCE}
+  {\bf Sessional Instructor} \vspace{4pt} \\
   David R. Cheriton School of Computer Science, University of Waterloo
   \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Prepare and present one section of CS116.
-    \item Write one assignment and assist with writing the final exam.
+    \item CS116 - Introduction to Computer Science 2 \hfill Winter 2011
+  \end{itemize} \vspace{-8pt}
+  Department of Computer Science, University of Manitoba
+  \begin{itemize}  \itemsep -2pt % reduce space between items
+    \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2008
   \end{itemize}
   
+  {\bf Tutorial/Lab Instructor} \vspace{4pt} \\
+  David R. Cheriton School of Computer Science, University of Waterloo
+  \begin{itemize}  \itemsep -2pt % reduce space between items
+    \item CS230 - Intro to Computers and Computer Systems \hfill Fall 2011, Winter 2010
+    \item CS115 - Introduction to Computer Science 1 \hfill Fall 2010
+  \end{itemize} \vspace{-8pt}
+  Department of Computer Science, University of Manitoba
+  \begin{itemize}  \itemsep -2pt % reduce space between items
+    \item COMP2160 - Programming Practices \hfill Fall 2008, Fall 2007
+    \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008
+    \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2007
+    \item COMP1260 - Introductory Computer Usage 1 \hfill Fall 2006
+  \end{itemize}
+  
+  {\bf Marker} \vspace{4pt} \\
+  David R. Cheriton School of Computer Science, University of Waterloo
+  \begin{itemize}  \itemsep -2pt % reduce space between items
+    \item CS486/686 - Introduction to Artificial Intelligence \hfill Summer 2010
+    \item CS135 - Designing Functional Programs \hfill Fall 2009
+  \end{itemize} \vspace{-8pt}
+  Department of Computer Science, University of Manitoba
+  \begin{itemize}  \itemsep -2pt % reduce space between items
+    \item COMP3040 - Technical Communication in CS \hfill Winter 2009, Winter 2008
+    \item COMP3620 - Professional Practice in Computer Science \hfill Winter 2009
+    \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008, Winter 2007
+    \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2006
+  \end{itemize}
+
+\section{WORK \\EXPERIENCE}
   {\sl Staff Writer} \hfill Winter 2010 - Present \\
   How-To Geek, LLC, Herndon, VA
   \begin{itemize}  \itemsep -2pt % reduce space between items
     \item Write how-to guides on various technical topics for the howtogeek.com blog.
-    \item Written over 50 articles to date, viewed over 900,000 times collectively.
-  \end{itemize}
-
-  {\sl Teaching Assistant and Instructional Apprentice} \hfill Fall 2009 - Present \\
-  David R. Cheriton School of Computer Science, University of Waterloo
-  \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Teach labs and tutorials, help proctor and marks exams, and mark assignments. 
+    \item Written over 55 articles to date, viewed over 2,300,000 times collectively.
   \end{itemize}
   
-  {\sl Sessional Instructor} \hfill Fall 2008 \\
-  Department of Computer Science, University of Manitoba
-  \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Prepared and delivered three 50-minute lectures each week.
-    \item Held at least five weekly office hours.
-    \item Helped prepare assignments and exams.
-  \end{itemize}
-
   {\sl Science and Technology Editor} \hfill 2008 - 2009 \\
   The Manitoban student newspaper, University of Manitoba
   \begin{itemize}  \itemsep -2pt % reduce space between items
@@ -105,38 +128,68 @@
     \item Assisted with the PaSSAGE (Player-Specific Stories via Automatically Generated Events) project.
     \item Created a GUI tool in Python to aid in the development of PaSSAGE.
   \end{itemize}
-  
-  {\sl Marker and Lab Instructor} \hfill Fall 2006 - Summer 2009 \\
-  Department of Computer Science, University of Manitoba
-  \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Taught labs for several classes from first to third year.
-    \item Marked assignments, both code-based and essays, in first to third year classes.
-  \end{itemize}
 
-\section{NON-REFEREED \\ PUBLICATIONS}
+\clearpage
+
+\section{REFEREED \\PUBLICATIONS}
+  Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C.. (2011)
+    {\sl Neural representations of compositional structures: representing and manipulating vector spaces with spiking neurons.} \\
+    Connection Science, 22, 145-153.
+
+\section{IN PRESS}
+  Eliasmith, C., \textbf{Bekolay, T.}, and Choo, X.. (2011) \\
+   {\sl Biological cognition: Learning and memory}, in Eliasmith, C. ``How to build a brain: A neural architecture for biological cognition.'' Oxford University Press.
+
+\section{IN PREPARATION}
+  Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C.. (2011) \\
+    {\sl Dynamic action selection in the basal ganglia.}
+    Frontiers in Decision Neuroscience, invited.
+
+% [Journal article, submitted] Stewart T.C., Bekolay, T., Eliasmith, C. (2011) Learning to select actions with spiking neurons in the basal ganglia. Frontiers in Decision Neuroscience, submission number 16887 (invited).
+
+
+\section{POSTERS \\PRESENTED}
+  \textbf{Bekolay, T.}, Eliasmith, C.. (2011)
+    {\sl A general error-modulated STDP learning rule applied to reinforcement learning in the basal ganglia.} \\
+    Computational and Systems Neuroscience, 2011, in Salt Lake City, UT.
+  
+  \textbf{Bekolay, T.}, Metz, D., Klassen, S., Martin, B., Mahaffy, P.. (2008) \\
+    {\sl Creating interactive animations for teaching science.} \\
+    NSERC Undergraduate Poster Competition, 2008, in Winnipeg, MB.
+
+\section{NON-REFEREED \\PUBLICATIONS}
+  \textbf{Bekolay, T.}. (2011)
+    {\sl Learning in large-scale spiking neural networks.} \\
+    Masters of Mathematics thesis, University of Waterloo.
+
+  \textbf{Bekolay, T.}. (2010) \\
+    {\sl Learning nonlinear functions on vectors: examples and predictions.} \\
+      Centre for Theoretical Neuroscience Technical Report CTN-TR-20101217-010.
+
   \textbf{Bekolay, T.}. (2010)
-    {\sl A general error-based spike-timing dependent learning rule for the Neural Engineering Framework.} \\
-    Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
+    {\sl Automating the Nengo build process.} \\
+    Centre for Theoretical Neuroscience Technical Report CTN-TR-20100917-009.
 
   \textbf{Bekolay, T.}. (2010)
     {\sl Using and extending plasticity rules in Nengo.} \\
     Centre for Theoretical Neuroscience Technical Report CTN-TR-20100910-008.
 
   \textbf{Bekolay, T.}. (2010)
-    {\sl Contributions to Nengo.} \\
-    Software released under a Mozilla public license.
+    {\sl A general error-based spike-timing dependent learning rule for the Neural Engineering Framework.} \\
+    Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
 
-  \textbf{Bekolay, T.}. (2010)
-    {\sl Automating the Nengo build process.} \\
-    Centre for Theoretical Neuroscience Technical Report CTN-TR-20100917-009.
+\section{SOFTWARE}
+  \textbf{Bekolay, T.}. (2010,2011)
+    {\sl Contributions to the Nengo neural simulator.} \\
+    Released under a Mozilla public license.
 
-  \textbf{Bekolay, T.}, Metz, D., Klassen, S., Martin, B., Mahaffy, P.. (2008) \\
-    {\sl Creating interactive animations for teaching science.} \\
-    NSERC Undergraduate Poster Competition.
+  \textbf{Bekolay, T.}. (2011)
+    {\sl Contributions to the PyBrain machine learning library.} \\
+    Released under a BSD license.
 
   \textbf{Bekolay, T.}, Thue, D., Bulitko, V.. (2007)
     {\sl Behaviour Tool for PaSSAGE.} \\
-    Software released under a BSD license.
+    Released under a BSD license.
 
 \end{resume}
 \end{document}
