--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -140,7 +140,7 @@
   Eliasmith, C., \textbf{Bekolay, T.}, and Choo, X.. (2011) \\
    {\sl Biological cognition: Learning and memory}, in Eliasmith, C. ``How to build a brain: A neural architecture for biological cognition.'' Oxford University Press.
 
-\section{IN PREPARATION}
+\section{SUBMITTED}
   Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C.. (2011) \\
     {\sl Dynamic action selection in the basal ganglia.}
     Frontiers in Decision Neuroscience, invited.
