CV as of Apr 2012

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -64,6 +64,7 @@
   {\bf Sessional Instructor} \vspace{4pt} \\
   David R. Cheriton School of Computer Science, University of Waterloo
   \begin{itemize}  \itemsep -2pt % reduce space between items
+    \item CS230 - Introduction to Computers and Computer Systems \hfill Fall 2011
     \item CS116 - Introduction to Computer Science 2 \hfill Winter 2011
   \end{itemize} \vspace{-8pt}
   Department of Computer Science, University of Manitoba
@@ -104,7 +105,7 @@
   How-To Geek, LLC, Herndon, VA
   \begin{itemize}  \itemsep -2pt % reduce space between items
     \item Write how-to guides on various technical topics for the howtogeek.com blog.
-    \item Written over 55 articles to date, viewed over 2,300,000 times collectively.
+    \item Written over 55 articles to date, viewed over 2,500,000 times collectively.
   \end{itemize}
   
   {\sl Science and Technology Editor} \hfill 2008 - 2009 \\
@@ -132,64 +133,64 @@
 \clearpage
 
 \section{REFEREED \\PUBLICATIONS}
-  Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C.. (2011)
+  Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C. (2012)
+    {\sl Learning to select actions with spiking neurons in the Basal Ganglia.} \\
+    Frontiers in Neuroscience 6:2. DOI: 10.3389/fnins.2012.00002
+
+  Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C. (2011)
     {\sl Neural representations of compositional structures: representing and manipulating vector spaces with spiking neurons.} \\
-    Connection Science, 22, 145-153.
+    Connection Science 22, 145-153.
 
 \section{IN PRESS}
-  Eliasmith, C., \textbf{Bekolay, T.}, and Choo, X.. (2011) \\
+  Eliasmith, C., \textbf{Bekolay, T.}, and Choo, X. (2011) \\
    {\sl Biological cognition: Learning and memory}, in Eliasmith, C. ``How to build a brain: A neural architecture for biological cognition.'' Oxford University Press.
 
-\section{SUBMITTED}
-  Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C.. (2011) \\
-    {\sl Dynamic action selection in the basal ganglia.}
-    Frontiers in Decision Neuroscience, invited.
-
-% [Journal article, submitted] Stewart T.C., Bekolay, T., Eliasmith, C. (2011) Learning to select actions with spiking neurons in the basal ganglia. Frontiers in Decision Neuroscience, submission number 16887 (invited).
-
-
 \section{POSTERS \\PRESENTED}
-  \textbf{Bekolay, T.}, Eliasmith, C.. (2011)
+  \textbf{Bekolay, T.}, Eliasmith, C. (2011)
     {\sl A general error-modulated STDP learning rule applied to reinforcement learning in the basal ganglia.} \\
     Computational and Systems Neuroscience, 2011, in Salt Lake City, UT.
   
-  \textbf{Bekolay, T.}, Metz, D., Klassen, S., Martin, B., Mahaffy, P.. (2008) \\
+  \textbf{Bekolay, T.}, Metz, D., Klassen, S., Martin, B., Mahaffy, P. (2008) \\
     {\sl Creating interactive animations for teaching science.} \\
     NSERC Undergraduate Poster Competition, 2008, in Winnipeg, MB.
 
 \section{NON-REFEREED \\PUBLICATIONS}
-  \textbf{Bekolay, T.}. (2011)
+  \textbf{Bekolay, T.} (2011)
     {\sl Learning in large-scale spiking neural networks.} \\
     Masters of Mathematics thesis, University of Waterloo.
 
-  \textbf{Bekolay, T.}. (2010) \\
+  \textbf{Bekolay, T.} (2010) \\
     {\sl Learning nonlinear functions on vectors: examples and predictions.} \\
       Centre for Theoretical Neuroscience Technical Report CTN-TR-20101217-010.
 
-  \textbf{Bekolay, T.}. (2010)
+  \textbf{Bekolay, T.} (2010)
     {\sl Automating the Nengo build process.} \\
     Centre for Theoretical Neuroscience Technical Report CTN-TR-20100917-009.
 
-  \textbf{Bekolay, T.}. (2010)
+  \textbf{Bekolay, T.} (2010)
     {\sl Using and extending plasticity rules in Nengo.} \\
     Centre for Theoretical Neuroscience Technical Report CTN-TR-20100910-008.
 
-  \textbf{Bekolay, T.}. (2010)
+  \textbf{Bekolay, T.} (2010)
     {\sl A general error-based spike-timing dependent learning rule for the Neural Engineering Framework.} \\
     Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
 
 \section{SOFTWARE}
-  \textbf{Bekolay, T.}. (2010,2011)
+  \textbf{Bekolay, T.} (2010,2011)
     {\sl Contributions to the Nengo neural simulator.} \\
     Released under a Mozilla public license.
 
-  \textbf{Bekolay, T.}. (2011)
+  \textbf{Bekolay, T.} (2011)
     {\sl Contributions to the PyBrain machine learning library.} \\
     Released under a BSD license.
 
-  \textbf{Bekolay, T.}, Thue, D., Bulitko, V.. (2007)
+  \textbf{Bekolay, T.} Thue, D., Bulitko, V.. (2007)
     {\sl Behaviour Tool for PaSSAGE.} \\
     Released under a BSD license.
+
+\section{OTHER ACTIVITIES}
+  University of Ottawa Summer School in Computational Neuroscience.
+  June 13-25, 2010.
 
 \end{resume}
 \end{document}
