CV as of May 2012

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -2,11 +2,11 @@
 \documentclass[line,margin]{res}
 \usepackage[T1]{fontenc}
 \usepackage{charter}
-%\usepackage{newcent}
+\usepackage{inconsolata}
 
 \begin{document}
 
-\name{\huge{Trevor Bekolay}}
+\name{\Huge{Trevor Bekolay}}
 % \address used twice to have two lines of address
 \address{31 Mulberry Ln, Waterloo, ON}
 \address{tbekolay@gmail.com $\cdot$ (519) 573-4815}
@@ -14,49 +14,55 @@
 \begin{resume}
 
 \section{EDUCATION}
-  {\sl Doctor of Philosophy,} Computer Science \\
-  University of Waterloo, Waterloo, ON, \\
-  expected September 2015 \\
-  Member of the Computational Neuroscience Research Group
 
-  {\sl Master of Mathematics,} Computer Science \\
-  University of Waterloo, Waterloo, ON, \\
-  graduated October 2011 \\
-  Member of the Computational Neuroscience Research Group \\
-  Cumulative GPA: 91.50
+{\sl Doctor of Philosophy,} Computer Science \\
+University of Waterloo, Waterloo, ON, \\
+expected September 2015 \\
+Member of the Computational Neuroscience Research Group
+
+{\sl Master of Mathematics,} Computer Science \\
+University of Waterloo, Waterloo, ON, \\
+graduated October 2011 \\
+Member of the Computational Neuroscience Research Group \\
+Cumulative GPA: 91.50
   
-  {\sl Honours Bachelor of Computer Science, Co-op Option} \\
-  University of Manitoba, Winnipeg, MB, \\
-  graduated May 2009 \\
-  Minor in Asian Studies \\
-  Cumulative GPA: 4.28/4.5
+{\sl Honours Bachelor of Computer Science, Co-op Option} \\
+University of Manitoba, Winnipeg, MB, \\
+graduated May 2009 \\
+Minor in Asian Studies \\
+Cumulative GPA: 4.28/4.5
 
 \section{AWARDS \& \\ SCHOLARSHIPS}
-  {\sl Ontario Graduate Scholarship} (Ontario Ministry of Training, Colleges and Universities) \\ 
-  \hspace*{1cm} Effective 09/2011 - 09/2012. Value: \$15,000 \vspace{3pt} \\
-  {\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
-  \hspace*{1cm} Effective 09/2011 - 09/2012. Value: \$10,000 \vspace{3pt} \\
-  {\sl Ontario Graduate Scholarship in Science and Technology} \\
-  (Ontario Ministry of Training, Colleges and Universities) \\ 
-  \hspace*{1cm} Effective 01/2011 - 05/2011. Value: \$5000 \vspace{3pt} \\
-  {\sl Alexander Graham Bell Canada Graduate Scholarship - Masters} (NSERC) \\ 
-  \hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$17,500 \vspace{3pt} \\
-  {\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
-  \hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$10,000 \vspace{3pt} \\
-  {\sl Distinguished TA Award} (School of Computer Science, University of Waterloo) \\
-  \hspace*{1cm} Awarded 09/2010 \vspace{3pt} \\
-  {\sl Excellence in Teaching Assistance Award} (Faculty of Science, University of Manitoba) \\
-  \hspace*{1cm} Awarded 09/2008. Value: \$300 \vspace{3pt} \\
-  {\sl Shell FUEL Scholarship} (University of Manitoba) \\
-  \hspace*{1cm} Effective 09/2008 - 04/2009. Value: \$3750 \vspace{3pt} \\
-  {\sl Undergraduate Student Research Award} (NSERC) \\
-  \hspace*{1cm} Effective 05/2008 - 08/2008. Value: \$4500 \vspace{3pt} \\
-  {\sl Elizabeth Luginbuhl Memorial Award} (Computer Science, University of Manitoba) \\
-  \hspace*{1cm} Effective 09/2007 - 08/2008. Value: \$2250 \vspace{3pt} \\
-  {\sl Undergraduate Student Research Award} (NSERC) \\
-  \hspace*{1cm} Effective 05/2007 - 08/2007. Value: \$4500 \vspace{3pt} \\
-  {\sl Japan Student Services Scholarship} (Kokugakuin University, Tokyo) \\
-  \hspace*{1cm} Effective 08/2005 - 08/2006. Value: \$11,000
+{\sl NSERC Postgraduate Scholarship - Doctorate} (NSERC) \\
+\hspace*{1cm} Effective 09/2012 - 09/2015. Value: \$63,000 \vspace{3pt} \\
+{\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
+\hspace*{1cm} Effective 09/2012 - 09/2015. Value: \$30,000 \vspace{3pt} \\
+{\sl Ontario Graduate Scholarship} (Ontario Ministry of Training, Colleges and Universities) \\ 
+\hspace*{1cm} Effective 09/2012 - 09/2013. Declined \vspace{3pt} \\
+{\sl Ontario Graduate Scholarship} (Ontario Ministry of Training, Colleges and Universities) \\ 
+\hspace*{1cm} Effective 09/2011 - 09/2012. Value: \$15,000 \vspace{3pt} \\
+{\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
+\hspace*{1cm} Effective 09/2011 - 09/2012. Value: \$10,000 \vspace{3pt} \\
+{\sl Ontario Graduate Scholarship in Science and Technology} (Ontario MTCU) \\ 
+\hspace*{1cm} Effective 01/2011 - 05/2011. Value: \$5000 \vspace{3pt} \\
+{\sl Alexander Graham Bell Canada Graduate Scholarship - Masters} (NSERC) \\ 
+\hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$17,500 \vspace{3pt} \\
+{\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
+\hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$10,000 \vspace{3pt} \\
+{\sl Distinguished TA Award} (School of Computer Science, University of Waterloo) \\
+\hspace*{1cm} Awarded 09/2010 \vspace{3pt} \\
+{\sl Excellence in Teaching Assistance Award} (Faculty of Science, University of Manitoba) \\
+\hspace*{1cm} Awarded 09/2008. Value: \$300 \vspace{3pt} \\
+{\sl Shell FUEL Scholarship} (University of Manitoba) \\
+\hspace*{1cm} Effective 09/2008 - 04/2009. Value: \$3750 \vspace{3pt} \\
+{\sl Undergraduate Student Research Award} (NSERC) \\
+\hspace*{1cm} Effective 05/2008 - 08/2008. Value: \$4500 \vspace{3pt} \\
+{\sl Elizabeth Luginbuhl Memorial Award} (Computer Science, University of Manitoba) \\
+\hspace*{1cm} Effective 09/2007 - 08/2008. Value: \$2250 \vspace{3pt} \\
+{\sl Undergraduate Student Research Award} (NSERC) \\
+\hspace*{1cm} Effective 05/2007 - 08/2007. Value: \$4500 \vspace{3pt} \\
+{\sl Japan Student Services Scholarship} (Kokugakuin University, Tokyo) \\
+\hspace*{1cm} Effective 08/2005 - 08/2006. Value: \$11,000
 
 \clearpage
 
@@ -101,11 +107,11 @@
   \end{itemize}
 
 \section{WORK \\EXPERIENCE}
-  {\sl Staff Writer} \hfill Winter 2010 - Present \\
+  {\sl Staff Writer} \hfill Winter 2010 - Summer 2011 \\
   How-To Geek, LLC, Herndon, VA
   \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item Write how-to guides on various technical topics for the howtogeek.com blog.
-    \item Written over 55 articles to date, viewed over 2,500,000 times collectively.
+    \item Wrote how-to guides on various technical topics for the howtogeek.com blog.
+    \item Wrote over 55 articles which have been viewed over 3.5 million times collectively.
   \end{itemize}
   
   {\sl Science and Technology Editor} \hfill 2008 - 2009 \\
@@ -188,8 +194,11 @@
     {\sl Behaviour Tool for PaSSAGE.} \\
     Released under a BSD license.
 
-\section{OTHER ACTIVITIES}
-  University of Ottawa Summer School in Computational Neuroscience.
+\section{OTHER \\ ACTIVITIES}
+  TA Committee member of the CS-GSA, University of Waterloo. \\
+  2010-2012
+
+  University of Ottawa Summer School in Computational Neuroscience. \\
   June 13-25, 2010.
 
 \end{resume}
