CV as of Dec 2012

--- a/tbekolay_cv.tex
+++ b/tbekolay_cv.tex
@@ -3,12 +3,15 @@
 \usepackage[T1]{fontenc}
 \usepackage{charter}
 \usepackage{inconsolata}
+\usepackage{booktabs}
+
+\setlength{\parskip}{0.6em}
 
 \begin{document}
 
 \name{\Huge{Trevor Bekolay}}
 % \address used twice to have two lines of address
-\address{31 Mulberry Ln, Waterloo, ON}
+\address{328 Breezewood Cres, Waterloo, ON}
 \address{tbekolay@gmail.com $\cdot$ (519) 573-4815}
 
 \begin{resume}
@@ -18,7 +21,8 @@
 {\sl Doctor of Philosophy,} Computer Science \\
 University of Waterloo, Waterloo, ON, \\
 expected September 2015 \\
-Member of the Computational Neuroscience Research Group
+Member of the Computational Neuroscience Research Group \\
+Cumulative GPA: 94.00
 
 {\sl Master of Mathematics,} Computer Science \\
 University of Waterloo, Waterloo, ON, \\
@@ -33,57 +37,57 @@ Minor in Asian Studies \\
 Cumulative GPA: 4.28/4.5
 
 \section{AWARDS \& \\ SCHOLARSHIPS}
-{\sl NSERC Postgraduate Scholarship - Doctorate} (NSERC) \\
-\hspace*{1cm} Effective 09/2012 - 09/2015. Value: \$63,000 \vspace{3pt} \\
-{\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
-\hspace*{1cm} Effective 09/2012 - 09/2015. Value: \$30,000 \vspace{3pt} \\
-{\sl Ontario Graduate Scholarship} (Ontario Ministry of Training, Colleges and Universities) \\ 
-\hspace*{1cm} Effective 09/2012 - 09/2013. Declined \vspace{3pt} \\
-{\sl Ontario Graduate Scholarship} (Ontario Ministry of Training, Colleges and Universities) \\ 
-\hspace*{1cm} Effective 09/2011 - 09/2012. Value: \$15,000 \vspace{3pt} \\
-{\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
-\hspace*{1cm} Effective 09/2011 - 09/2012. Value: \$10,000 \vspace{3pt} \\
-{\sl Ontario Graduate Scholarship in Science and Technology} (Ontario MTCU) \\ 
-\hspace*{1cm} Effective 01/2011 - 05/2011. Value: \$5000 \vspace{3pt} \\
-{\sl Alexander Graham Bell Canada Graduate Scholarship - Masters} (NSERC) \\ 
-\hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$17,500 \vspace{3pt} \\
-{\sl President's Graduate Scholarship} (Computer Science, University of Waterloo) \\
-\hspace*{1cm} Effective 09/2009 - 09/2010. Value: \$10,000 \vspace{3pt} \\
-{\sl Distinguished TA Award} (School of Computer Science, University of Waterloo) \\
-\hspace*{1cm} Awarded 09/2010 \vspace{3pt} \\
-{\sl Excellence in Teaching Assistance Award} (Faculty of Science, University of Manitoba) \\
-\hspace*{1cm} Awarded 09/2008. Value: \$300 \vspace{3pt} \\
-{\sl Shell FUEL Scholarship} (University of Manitoba) \\
-\hspace*{1cm} Effective 09/2008 - 04/2009. Value: \$3750 \vspace{3pt} \\
-{\sl Undergraduate Student Research Award} (NSERC) \\
-\hspace*{1cm} Effective 05/2008 - 08/2008. Value: \$4500 \vspace{3pt} \\
-{\sl Elizabeth Luginbuhl Memorial Award} (Computer Science, University of Manitoba) \\
-\hspace*{1cm} Effective 09/2007 - 08/2008. Value: \$2250 \vspace{3pt} \\
-{\sl Undergraduate Student Research Award} (NSERC) \\
-\hspace*{1cm} Effective 05/2007 - 08/2007. Value: \$4500 \vspace{3pt} \\
-{\sl Japan Student Services Scholarship} (Kokugakuin University, Tokyo) \\
-\hspace*{1cm} Effective 08/2005 - 08/2006. Value: \$11,000
 
-\clearpage
-
+\begin{tabular}{lrr}
+{\sl Alexander Graham Bell CGS - Doctorate} (NSERC) &
+\$105,000 & 2012/09 -- 2015/09 \\
+{\sl President's Graduate Scholarship} (CS, U. of Waterloo) &
+\$30,000 & 2012/09 -- 2015/09 \\
+{\sl Ontario Graduate Scholarship} (Gov. of Ontario) & 
+Declined & 2012/09 -- 2013/09 \\
+{\sl Ontario Graduate Scholarship} (Gov. of Ontario) &
+\$15,000 & 2011/09 -- 2012/09 \\
+{\sl President's Graduate Scholarship} (CS, U. of Waterloo) &
+\$10,000 & 2011/09 -- 2012/09 \\
+{\sl OGS in Science and Technology} (Gov. of Ontario) &
+\$5,000 & 2011/01 -- 2011/05 \\
+{\sl Alexander Graham Bell CGS - Masters} (NSERC) &
+\$17,500 & 2009/09 -- 2010/09 \\
+{\sl President's Graduate Scholarship} (CS, U. of Waterloo) &
+\$10,000 & 2009/09 -- 2010/09 \\
+{\sl Distinguished TA Award} (CS, U. of Waterloo) &
+-- & 2010/09 \\
+{\sl Excellence in Teaching Assistance Award} (U. of Manitoba) &
+\$300 & 2008/09 \\
+{\sl Shell FUEL Scholarship} (U. of Manitoba) &
+\$3,750 & 2008/09 -- 2009/04 \\
+{\sl Undergraduate Student Research Award} (NSERC) &
+\$4,500 & 2008/05 -- 2008/08 \\
+{\sl Elizabeth Luginbuhl Memorial Award} (U. of Manitoba) &
+\$2,250 & 2007/09 -- 2008/09 \\
+{\sl Undergraduate Student Research Award} (NSERC) &
+\$4,500 & 2007/05 -- 2007/08 \\
+{\sl Japan Student Services Scholarship} (Kokugakuin, Tokyo) &
+\$11,000 & 2005/08 -- 2006/08
+\end{tabular}
 \section{TEACHING \\EXPERIENCE}
-  {\bf Sessional Instructor} \vspace{4pt} \\
+  {\bf Sessional Instructor} ~~3 terms \vspace{4pt} \\
   David R. Cheriton School of Computer Science, University of Waterloo
   \begin{itemize}  \itemsep -2pt % reduce space between items
     \item CS230 - Introduction to Computers and Computer Systems \hfill Fall 2011
     \item CS116 - Introduction to Computer Science 2 \hfill Winter 2011
-  \end{itemize} \vspace{-8pt}
+  \end{itemize} \vspace{-4pt}
   Department of Computer Science, University of Manitoba
   \begin{itemize}  \itemsep -2pt % reduce space between items
     \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2008
   \end{itemize}
   
-  {\bf Tutorial/Lab Instructor} \vspace{4pt} \\
+  {\bf Tutorial/Lab Instructor} ~~9 terms \vspace{4pt} \\
   David R. Cheriton School of Computer Science, University of Waterloo
   \begin{itemize}  \itemsep -2pt % reduce space between items
-    \item CS230 - Intro to Computers and Computer Systems \hfill Fall 2011, Winter 2010
+    \item CS230 - Intro to Comp. \& Comp. Systems \hfill Fall 2012, Fall 2011, Winter 2010
     \item CS115 - Introduction to Computer Science 1 \hfill Fall 2010
-  \end{itemize} \vspace{-8pt}
+  \end{itemize} \vspace{-4pt}
   Department of Computer Science, University of Manitoba
   \begin{itemize}  \itemsep -2pt % reduce space between items
     \item COMP2160 - Programming Practices \hfill Fall 2008, Fall 2007
@@ -92,12 +96,12 @@ Cumulative GPA: 4.28/4.5
     \item COMP1260 - Introductory Computer Usage 1 \hfill Fall 2006
   \end{itemize}
   
-  {\bf Marker} \vspace{4pt} \\
+  {\bf Marker} ~~8 terms \vspace{4pt} \\
   David R. Cheriton School of Computer Science, University of Waterloo
   \begin{itemize}  \itemsep -2pt % reduce space between items
     \item CS486/686 - Introduction to Artificial Intelligence \hfill Summer 2010
     \item CS135 - Designing Functional Programs \hfill Fall 2009
-  \end{itemize} \vspace{-8pt}
+  \end{itemize} \vspace{-4pt}
   Department of Computer Science, University of Manitoba
   \begin{itemize}  \itemsep -2pt % reduce space between items
     \item COMP3040 - Technical Communication in CS \hfill Winter 2009, Winter 2008
@@ -105,6 +109,13 @@ Cumulative GPA: 4.28/4.5
     \item COMP2140 - Data Structures and Algorithms \hfill Winter 2008, Winter 2007
     \item COMP1010 - Introductory Computer Science 1 \hfill Fall 2006
   \end{itemize}
+
+\section{TEACHING \\ACCREDITATION}
+  {\bf Fundamentals of University Teaching} \\
+  Completed in April, 2012.
+
+  {\bf Certificate in University Teaching} \\
+  In progress; expected completion in August, 2013.
 
 \section{WORK \\EXPERIENCE}
   {\sl Staff Writer} \hfill Winter 2010 - Summer 2011 \\
@@ -136,9 +147,24 @@ Cumulative GPA: 4.28/4.5
     \item Created a GUI tool in Python to aid in the development of PaSSAGE.
   \end{itemize}
 
+\section{OTHER \\ ACTIVITIES}
+  Co-founder and co-chair of the Cheriton Review committee,
+  University of Waterloo. 2011-2012.
+
+  TA Committee member of the CS-GSA, University of Waterloo. \\
+  2010-2012.
+
+  University of Ottawa Summer School in Computational Neuroscience. \\
+  June 13-25, 2010.
+
 \clearpage
 
 \section{REFEREED \\PUBLICATIONS}
+  Eliasmith, C., Stewart, T.C., Choo, X., \textbf{Bekolay, T.},
+    DeWolf, T., Tang, C., Rasmussen, D. (2012)
+    {\sl A large-scale model of the functioning brain.} \\
+    Science 338:6111, 1202-1205. DOI: 10.1126/science.1225266
+
   Stewart, T.C., \textbf{Bekolay, T.}, Eliasmith, C. (2012)
     {\sl Learning to select actions with spiking neurons in the Basal Ganglia.} \\
     Frontiers in Neuroscience 6:2. DOI: 10.3389/fnins.2012.00002
@@ -152,6 +178,10 @@ Cumulative GPA: 4.28/4.5
    {\sl Biological cognition: Learning and memory}, in Eliasmith, C. ``How to build a brain: A neural architecture for biological cognition.'' Oxford University Press.
 
 \section{POSTERS \\PRESENTED}
+  \textbf{Bekolay, T.}, Liu, B., Eliasmith, C., Laubach, M. (2012)
+    {\sl A spiking neural model of strategy shifting in a simple reaction time task} \\
+    Society for Neuroscience, 2012, in New Orleans, LA.
+
   \textbf{Bekolay, T.}, Eliasmith, C. (2011)
     {\sl A general error-modulated STDP learning rule applied to reinforcement learning in the basal ganglia.} \\
     Computational and Systems Neuroscience, 2011, in Salt Lake City, UT.
@@ -182,24 +212,25 @@ Cumulative GPA: 4.28/4.5
     Centre for Theoretical Neuroscience Technical Report CTN-TR-20100803-006.
 
 \section{SOFTWARE}
-  \textbf{Bekolay, T.} (2010,2011)
-    {\sl Contributions to the Nengo neural simulator.} \\
+  \textbf{Bekolay, T.} (2010 - 2012)
+    {\sl Build manager and contributor to the Nengo neural simulator.}
     Released under a Mozilla public license.
+
+  \textbf{Bekolay, T.} (2012)
+    {\sl Co-maintainer of the python-quantities library for physical quantities in Python.} Released under a BSD license.
+
+  \textbf{Bekolay, T.} (2012)
+    {\sl Maintainer of the JNumeric library for matrix operations in Jython.} \\
+    Released under the Python license.
 
   \textbf{Bekolay, T.} (2011)
     {\sl Contributions to the PyBrain machine learning library.} \\
     Released under a BSD license.
 
   \textbf{Bekolay, T.} Thue, D., Bulitko, V.. (2007)
-    {\sl Behaviour Tool for PaSSAGE.} \\
+    {\sl Creator of Behaviour Tool for PaSSAGE.} \\
     Released under a BSD license.
-
-\section{OTHER \\ ACTIVITIES}
-  TA Committee member of the CS-GSA, University of Waterloo. \\
-  2010-2012
-
-  University of Ottawa Summer School in Computational Neuroscience. \\
-  June 13-25, 2010.
 
 \end{resume}
 \end{document}
+
